additional request parameters
unit tests written