@@ -20,16 +20,33 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+
+        unitTests.returnDefaultValues = true
+
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestCompile('com.android.support.test:runner:0.5', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    androidTestCompile('com.android.support.test:rules:0.5', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:25.1.1'
+//    testCompile 'org.testng:testng:6.9.6'
+    testCompile 'org.mockito:mockito-core:2.7.10'
+    androidTestCompile 'junit:junit:4.12'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.android.support:appcompat-v7:25.1.1'
+
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
